Fix card content overflowing

--- a/styles.css
+++ b/styles.css
@@ -5,12 +5,14 @@
 *, *::before, *::after {
     box-sizing: border-box;
   }
-  * {
-    margin: 0;
-  }
+  
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    /* min-height: 100%; */
+    /* min-height: auto; */
+    /* min-height: 100vh; */
+    margin: 0;
   }
   img, picture, video, canvas, svg {
     display: block;
@@ -30,17 +32,27 @@
   }
   #root, #__next {
     isolation: isolate;
+    /* height: 100vh; */
+    /* height: 100%; */
+    /* min-height: 100vh; */
   }
 
   /* End reset */
 
+  html, body {
+    height: 100%;
+    /* min-width: 100%; */
+  }
 
 
 
   .page-layout-container {
     display: grid;
     grid-template-columns: 1fr 6fr;
-    height: 100vh;
+    /* height: 100vh;
+    width: 100%; */
+    /* min-width: 100%; */
+    margin: 0;
   }
 
   .right-container {
@@ -93,9 +105,10 @@
     /* grid-template-rows: repeat(auto-fit, 1fr); */
     /* grid-template-rows: repeat(5, 1fr); */
     grid-template-rows: repeat(auto-fit, minmax(min-content, 1fr));
-    min-width: 200px;
+    /* min-width: 200px; */
+    /* min-width: auto; */
     max-width: 400px;
-    height: 400px;
+    /* height: 400px; */
     height: min-content;
   }
 
@@ -126,6 +139,7 @@
     grid-column: 1 / -1;
     justify-self: center;
     text-align: center;
+    overflow-wrap: anywhere;  /*may set a conditional on this to create new class, so it's separated from 'normal' title names */
   }
 
   .book-author {
